--- a/style.css
+++ b/style.css
@@ -18,3 +18,43 @@ menu li a{
     margin: 0 0.5em;
 }
 
+.row {
+    display: flex;
+}
+
+.col-4 {
+    width: (100% / 3); 
+}
+.col-6 {
+    width: 50%;
+}
+
+.col-8 {
+    border: 1px solid red;
+    width: calc( 100% / 3 * 2);
+}
+.col-12 {
+    width: 100%;
+}
+
+#second-text {
+    text-align: center;
+}
+
+.col-offset-2 {
+    width: calc(100% / 6);
+}
+
+figure {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+figure img {
+    max-width: 100%;
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    border: 1px solid blue;
+}
