--- a/style.css
+++ b/style.css
@@ -30,10 +30,14 @@ menu li a{
 }
 
 .col-8 {
-    border: 1px solid red;
     width: calc( 100% / 3 * 2);
 }
+
+.col-10 {
+    width: calc(100% * 10 / 12);
+}
 .col-12 {
+
     width: 100%;
 }
 
@@ -56,5 +60,9 @@ figure img {
     width: 100px;
     height: 100px;
     border-radius: 10px;
+    border: 1px solid blue;
+}
+
+#signup-container {
     border: 1px solid blue;
 }
